<resources>
    <string name="app_name">BflagClient</string>

    <!--Facebook sign in-->
    <string name="facebook_app_id">1879952642064210</string>
    <string name="fb_login_protocol_scheme">fb1879952642064210</string>

    <!--Sign-->
    <string name="app_name_show">Bflag Chat</string>


    <!--Chat room-->
    <string name="hint_chat">Message</string>

    <!--Sign-->
    <string name="bflag_chat">Bflag Chat</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don"'"t have account?</string>
    <string name="sign_up_more">Or using Google, Facebook account</string>

    <!--Home-->
    <string name="messages">Messages</string>
    <string name="active">Active</string>
    <string name="group">Group</string>

    <!--User-->
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="edit_your_info">Edit Your Info</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!--Reset Password-->
    <string name="send_email">SEND EMAIL</string>
    <string name="verify">VERIFY</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="new_password">New Password</string>
    <string name="retype">Retype Password</string>

    <!--Create room-->
    <string name="new_room">New chat room</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel_room">CANCEL</string>

    <!--Search-->
    <string name="search">Search</string>

    <!--Unsubscribed-->
    <string name="unsubscribe">Unsubscribe room</string>
    <string name="unsubscribed_description">Do you want to unsubscribe this room and do not show it anymore?</string>


</resources>
